--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://teachingresources.shaffermusic.com
+url: http://teachingresources.cubouldermusictheory.com
 title: "Teaching Resources, Music Theory and Aural Skills"
-email: kris.shaffer@colorado.edu
+email: yonatan.malin@colorado.edu
 description: "CU–Boulder College of Music"
 
 # ----------------------- #
